@@ -10,6 +10,7 @@
 - Feature: [#13858] Flatride bases can be made invisible.
 - Feature: [#15367] Individual track elements can now be drawn as another ride type.
 - Feature: [#16029] [Plugin] Add TrackElement.rideType to API.
+- Feature: [#16132] The Corkscrew Roller Coaster can now draw inline twists.
 - Feature: [#16144] [Plugin] Add ImageManager to API.
 - Improved: [#3517] Cheats are now saved with the park.
 - Improved: [#10150] Ride stations are now properly checked if they’re sheltered.
